# lesmotsdatche

./: .air.toml  .env.example  .gitignore  .pre-commit-config.yaml  BRIEF.md  CLAUDE.md  Dockerfile.api  Dockerfile.api.dev  PRs.md  README.md  compose.dev.yaml  compose.yaml  go.mod  go.sum
cmd/api/: main.go
cmd/generate/: main.go
docs/: ARCHITECTURE.md  EXECUTIVE_SUMMARY.md
flutter_app/: Dockerfile  Dockerfile.dev  README.md  pubspec.yaml
flutter_app/lib/: app.dart  main.dart
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
internal/api/: admin.go  admin_test.go  handlers.go  handlers_test.go  middleware.go  routes.go
internal/domain/: extract.go  extract_test.go  normalize.go  normalize_test.go  numbering.go  types.go  (+2 more)
python_generator/: Dockerfile  Dockerfile.dev  cli.py  pyproject.toml  requirements.txt
python_generator/api/: routes.py
python_generator/data/: fallback_words.txt
python_generator/domain/: __init__.py  types.py
python_generator/generator/: __init__.py  candidates.py  clue.py  grid_builder.py  lexicon.py  orchestrator.py  solver.py  theme.py
python_generator/language/: __init__.py  french.py
python_generator/llm/: __init__.py  client.py
python_generator/seed/: seed.sh
python_generator/tests/: test_grid_builder.py  test_lexicon.py
schemas/: draft_bundle.schema.json  puzzle.schema.json
seed/: puzzle.json  seed.sh
testdata/: invalid_bad_cell_type.json  invalid_difficulty_range.json  invalid_missing_id.json  small_5x5_clues.json  small_5x5_grid.json  small_5x5_numbered.json  valid_7x7.json
(+77 files in other folders)
